src/prd/kubernetes/flux/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
  namespace: linuxcaveprd-scratch
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: apollo-server.linuxcave.io
    http:
      paths:
      - path: /(.*)
        backend:
          serviceName: apollo-server
          servicePort: 4000
  tls:
    - hosts:
      - apollo-server.linuxcave.io
      secretName: apollo-server-linuxcave-dev-tls
